vault-tasks-core/src/snapshots/vault_tasks_core__sorter__tests__task_sort_by_due_date.snap
---
source: vault-tasks-core/src/sorter.rs
description: ""
expression: tasks
info:
  - " test 10/11"
  - " test 10/9"
  - " test 10/10 p5"
  - " test 10/10 10:00"
  - " zèbre"
  - " zzz"
  - " zzz"
  - " test 10/10 p2"
  - " test"
  - " test2"
  - " test 10/10 5:00"
  - " abc"
---
[
    "  - [ ] test 2024/10/09",
    "  - [ ] test 2024/10/10 p2",
    "  - [ ] test 2024/10/10 p5",
    "  - [ ] test 2024/10/10 05:00:00",
    "  - [ ] test 2024/10/10 10:00:00",
    "  - [ ] test 2024/10/11",
    "  - [ ] abc",
    "  - [ ] test2",
    "  - [ ] zzz",
    "  - [x] test",
    "  - [x] zèbre",
    "  - [x] zzz",
]
