vault-tasks-core/src/snapshots/vault_tasks_core__sorter__tests__task_sort_by_name.snap
---
source: vault-tasks-core/src/sorter.rs
description: ""
expression: tasks
info:
  - " test 10/11"
  - " test 10/9"
  - " test 10/10 p5"
  - " test 10/10 10:00"
  - " zèbre"
  - " zzz"
  - " zzz"
  - " test 10/10 p2"
  - " test"
  - " test2"
  - " test 10/10 5:00"
  - " abc"
---
[
    "  - [ ] abc",
    "  - [ ] test 2025-10-09",
    "  - [ ] test 2025-10-10 p2",
    "  - [ ] test 2025-10-10 p5",
    "  - [ ] test 2025-10-10 05:00:00",
    "  - [ ] test 2025-10-10 10:00:00",
    "  - [ ] test 2025-10-11",
    "  - [x] test",
    "  - [ ] test2",
    "  - [x] zèbre",
    "  - [ ] zzz",
    "  - [x] zzz",
]
