vault-tasks-core/src/snapshots/vault_tasks_core__sorter__tests__task_sort_states.snap
---
source: vault-tasks-core/src/sorter.rs
description: ""
expression: tasks
info:
  - " test"
  - " test"
  - " test"
  - " test"
---
[
    "  - [/] test",
    "  - [ ] test",
    "  - [-] test",
    "  - [x] test",
]
